After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 613633 - [resindvd] scrambled DVDs yield useless generic error message if dvdcss is not available
[resindvd] scrambled DVDs yield useless generic error message if dvdcss is no...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.10.21
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-03-22 20:58 UTC by Peter Robinson
Modified: 2010-09-26 19:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Peter Robinson 2010-03-22 20:58:45 UTC
To recreate run totem and select "Play Disk XXX" from within the Movie menu. 

On one DVD I get:

You then get the following error message dialog.

"An error occurred" and "could not read from resource"

And the following logs from the console:

[peter@cypher ~]$ totem
/usr/lib/python2.6/site-packages/httplib2/__init__.py:29: DeprecationWarning: the md5 module is deprecated; use hashlib instead
  import md5
/usr/lib/python2.6/site-packages/httplib2/__init__.py:44: DeprecationWarning: the sha module is deprecated; use the hashlib module instead
  import sha
ERROR:dbus.proxies:Introspect error on :1.104:/org/gnome/DVB/Manager: dbus.exceptions.DBusException: org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
Traceback (most recent call last):
  • File "/usr/lib/python2.6/site-packages/dbus/connection.py", line 586 in msg_reply_handler
    reply_handler(*message.get_args_list(**get_args_opts))
  • File "/usr/lib/python2.6/site-packages/gnomedvb/DBusWrapper.py", line 102 in find_devices_handler
    reply_handler(deviceslist)
  • File "/usr/lib/python2.6/site-packages/gnomedvb/DVBModel.py", line 57 in devices_handler
    reply_handler(devs)
  • File "/usr/lib64/totem/plugins/dvb-daemon/dvb-daemon.py", line 259 in <lambda>
    self.manager.get_all_devices(lambda devs: self.enable_dvb_support(len(devs) > 0))
  • File "/usr/lib64/totem/plugins/dvb-daemon/dvb-daemon.py", line 263 in enable_dvb_support
    self._size = self.manager.get_device_group_size()
  • File "/usr/lib/python2.6/site-packages/gnomedvb/DBusWrapper.py", line 165 in get_device_group_size
    return self.manager.GetDeviceGroupSize(**kwargs)
  • File "/usr/lib/python2.6/site-packages/dbus/proxies.py", line 68 in __call__
    return self._proxy_method(*args, **keywords)
  • File "/usr/lib/python2.6/site-packages/dbus/proxies.py", line 140 in __call__
    **keywords)
  • File "/usr/lib/python2.6/site-packages/dbus/connection.py", line 630 in call_blocking
    message, timeout)
dbus.exceptions.DBusException: org.freedesktop.DBus.Error.NoReply: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken.
libdvdread: Encrypted DVD support unavailable.
libdvdnav: Using dvdnav version 4.1.4
libdvdread: Encrypted DVD support unavailable.
libdvdnav: DVD Title: 10THINGS_DISC1_UK
libdvdnav: DVD Serial Number: 381EBF16
libdvdnav: DVD Title (Alternative): 
libdvdnav: Unable to find map file '/home/peter/.dvdnav/10THINGS_DISC1_UK.map'
libdvdnav: DVD disk reports itself with Region mask 0x00fd0000. Regions: 2
No accelerated IMDCT transform found
** Message: Error: Could not read from resource.
resindvdsrc.c(1100): rsn_dvdsrc_step (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin0/RsnDvdBin:source/resinDvdSrc:dvdsrc:
Failed to read next DVD block. Error: Error reading from DVD.

libdvdread: Encrypted DVD support unavailable.
libdvdnav: Using dvdnav version 4.1.4
libdvdread: Encrypted DVD support unavailable.
libdvdnav: DVD Title: 10THINGS_DISC1_UK
libdvdnav: DVD Serial Number: 381EBF16
libdvdnav: DVD Title (Alternative): 
libdvdnav: Unable to find map file '/home/peter/.dvdnav/10THINGS_DISC1_UK.map'
libdvdnav: DVD disk reports itself with Region mask 0x00fd0000. Regions: 2
No accelerated IMDCT transform found
** Message: Error: Could not read from resource.
resindvdsrc.c(1100): rsn_dvdsrc_step (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin1/RsnDvdBin:source/resinDvdSrc:dvdsrc:
Failed to read next DVD block. Error: Error reading from DVD.

 
On another DVD I get the menu come up OK but when I click "Play Movie" from the DVD menu I get a "pa_stream_writable_size() failed: Connection terminated" dialog box with the following output:

[peter@cypher ~]$ totem
/usr/lib/python2.6/site-packages/httplib2/__init__.py:29: DeprecationWarning: the md5 module is deprecated; use hashlib instead
  import md5
/usr/lib/python2.6/site-packages/httplib2/__init__.py:44: DeprecationWarning: the sha module is deprecated; use the hashlib module instead
  import sha
libdvdread: Encrypted DVD support unavailable.
libdvdnav: Using dvdnav version 4.1.4
libdvdread: Encrypted DVD support unavailable.
libdvdnav: DVD Title: LS080299
libdvdnav: DVD Serial Number: 34FACBD7
libdvdnav: DVD Title (Alternative): 
libdvdnav: Unable to find map file '/home/peter/.dvdnav/LS080299.map'
libdvdnav: DVD disk reports itself with Region mask 0x00f50000. Regions: 2 4
No accelerated IMDCT transform found
** Message: Error: pa_stream_writable_size() failed: Connection terminated
pulsesink.c(1386): gst_pulseringbuffer_commit (): /GstPlayBin2:play/GstPlaySink:playsink0/GstBin:abin/GstBin:audiosinkbin/GstGConfAudioSink:audio-sink/GstBin:bin2/GstAutoAudioSink:autoaudiosink1/GstPulseSink:autoaudiosink1-actual-sink-pulse


Installed components are:

totem-2.29.92-1.fc13.x86_64
gstreamer-tools-0.10.28-2.fc13.x86_64
gstreamer-plugins-bad-free-0.10.18-1.fc13.x86_64
gstreamer-plugins-ugly-0.10.14-1.fc13.x86_64
gstreamer-rtsp-0.10.5-1.fc13.x86_64
gstreamer-0.10.28-2.fc13.x86_64
gstreamer-python-0.10.16-1.fc12.x86_64
PackageKit-gstreamer-plugin-0.6.2-1.fc13.x86_64
gstreamer-plugins-base-0.10.28-1.fc13.x86_64
gstreamer-plugins-bad-0.10.17-4.fc13.x86_64
gstreamer-ffmpeg-0.10.10-1.fc13.x86_64
gstreamer-plugins-good-0.10.21-1.fc13.x86_64

I'm using the rpmfusion repository for all things not in F-13 mainline
Comment 1 Bastien Nocera 2010-03-22 22:07:37 UTC
Both are due to rsindvdbin not giving back a nice error when you don't have libdvdcss installed.

Jan, any ideas on how to make that better?
Comment 2 Tim-Philipp Müller 2010-09-26 19:49:34 UTC
Let's try this until someone figures out a better way:

commit 7192b9f6b3ecc79d6de6a64b53c06377cbc79cc0
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Sun Sep 26 19:24:08 2010 +0100

    dvdreadsrc: improve error messages on read errors
    
    Provide proper i18n-ed error messages when a read error happens,
    and point out that the error could be happening because the
    DVD is scrambled.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=613633


commit 887fc8e6e7bdd46d3f262fddec533594b6e7cb9c
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Sun Sep 26 20:41:25 2010 +0100

    resindvdsrc: improve error messages on read erros
    
    Provide i18n-ed error messages when a read error happens,
    and point out that the error could be happening because the
    DVD is scrambled.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=613633